tests/macros/unknown/kind.stderr
error: unknown question kind unknown
 --> $DIR/kind.rs:2:35
  |
2 |     let q = discourse::questions![unknown {}];
  |                                   ^^^^^^^
