tests/macros/unknown/kind.rs
fn main() {
    let q = discourse::questions![unknown {}];
}
